14686
given two files

A.scala
```scala
class A { val x = 1 }
```

AA.scala
```scala
object A { val y = 1 }
```

compiling them (separately) and then running the interpreter
```scala
scala> new A
<console>:5: error: not found: type A
       new A
           ^

scala> A
res1: A.type = A$$@3f2f529b
```

compiling them together gives the right error message (`must be defined in same file`).
